--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,3 +1,7 @@
 [settings]
+line_length = 79
+multi_line_output = 3
+include_trailing_comma = True
 profile = black
 known_first_party = cv_validator
+known_third_party = cv2,joblib,numpy,pytest,sklearn,yaml
