--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,11 @@ repos:
   - id: mixed-line-ending
     args: ['--fix=auto']
 
+-   repo: https://github.com/asottile/seed-isort-config
+    rev: v2.2.0
+    hooks:
+    -   id: seed-isort-config
+
 - repo: https://github.com/pycqa/isort
   rev: 5.10.1
   hooks:
