--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,28 @@ numpy = "^1.22.1"
 pandas = "^1.4.0"
 opencv-python = "^4.5.5"
 albumentations = "^1.1.0"
+plotly = "^5.6.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 79
+include = '.pyi?$'
+exclude = '''
+/(
+    .git
+    | .hg
+    | .mypy_cache
+    | .tox
+    | .venv
+    | _build
+    | buck-out
+    | build
+    | dist
+)/
+'''
