core functions no testing

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -4,4 +4,4 @@ multi_line_output = 3
 include_trailing_comma = True
 profile = black
 known_first_party = cv_validator
-known_third_party = cv2,joblib,numpy,pytest,sklearn,yaml
+known_third_party = cv2,joblib,numpy,pandas,plotly,pytest,sklearn,yaml
