--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^1.4.0"
 opencv-python = "^4.5.5"
 albumentations = "^1.1.0"
 plotly = "^5.6.0"
+ipython = "^8.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
