--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ opencv-python = "^4.5.5"
 albumentations = "^1.1.0"
 plotly = "^5.6.0"
 ipython = "^8.0.1"
+my-package = {path = ".", develop = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
