--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,15 @@ description = ""
 authors = ["Ruslan Sakaev <sakaevruslan@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.11"
 numpy = "^1.22.1"
 pandas = "^1.4.0"
 opencv-python = "^4.5.5"
-albumentations = "^1.1.0"
 plotly = "^5.6.0"
 ipython = "^8.0.1"
-my-package = {path = ".", develop = true}
+# my-package = {path = ".", develop = true}
+onnxruntime = "^1.10.0"
+scipy = "^1.8.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
