--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,14 @@ repos:
   - id: mixed-line-ending
     args: ['--fix=auto']
 
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: 'v0.931'  # Use the sha / tag you want to point at
+    hooks:
+    -   id: mypy
+        additional_dependencies: [types-PyYAML]
+        verbose: true
+        entry: bash -c 'mypy "$@" || true' --
+
 - repo: https://github.com/pycqa/isort
   rev: 5.10.1
   hooks:
