--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,11 @@
 [tool.poetry]
 name = "cv-validator"
-version = "0.1.0"
+version = "0.1.2"
 description = "Tool for validating your computer vision data and model results."
 authors = ["Ruslan Sakaev <sakaevruslan@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/ningeen/cv-validator"
-repository = "https://github.com/ningeen/cv-validator"
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
@@ -18,6 +17,7 @@ plotly = "^5.6.0"
 tqdm = "^4.62.3"
 onnx = "^1.11.0"
 onnxruntime = "^1.10.0"
+joblib = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
